# RK

./: README.md  pyproject.toml  run_visualizer.py
src/rk_visualizer/: __init__.py  animation.py  app.py  methods.py  parser.py  plotting.py  reference.py  solver.py  webapp.py
src/rk_visualizer/web/: app.js  index.html  styles.css
tests/: test_animation.py  test_parser.py  test_reference.py  test_solver.py  test_webapp.py
