[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rk-visualizer"
version = "0.1.0"
description = "Interactive visualization of Runge-Kutta methods for first-order ODEs."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "OpenAI Codex" }
]
dependencies = []

[project.scripts]
rk-visualizer = "rk_visualizer.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rk_visualizer = ["web/*.html", "web/*.css", "web/*.js"]
